# palladin

./: .gitignore  Cargo.toml
cli/: Cargo.toml
cli/src/: cli.rs  logger.rs  main.rs
playground/: index.html  package.json
playground/src/: App.tsx  frontend.tsx  index.css  index.tsx
server/: Cargo.toml
server/src/: file.rs  lib.rs  watcher.rs
server/src/hmr/: hmr_client.js  inject.rs  mod.rs  ws.rs
server/src/rolldown/: chunks.rs  engine.rs  mod.rs
server/src/server/: config.rs  context.rs  errors.rs  files.rs  mod.rs
shared/: Cargo.toml
shared/src/: error.rs  lib.rs  path.rs
