[workspace]
resolver = "3"
members = ["cli", "server", "shared"]

[workspace.dependencies]
palladin-shared = { path = "./shared" }
palladin-server = { path = "./server" }
palladin-cli = { path = "./cli" }
tokio = { version = "1.48.0", features = ["full"] }
fs-err = "3.1.3"
axum = "0.8.6"
rolldown = { git = "https://github.com/rolldown/rolldown" }
rolldown_error = { git = "https://github.com/rolldown/rolldown" }
rolldown_common = { git = "https://github.com/rolldown/rolldown" }