[workspace]
resolver = "3"
members = ["cli", "server", "shared"]

[workspace.dependencies]
palladin-shared = { path = "./shared" }
palladin-server = { path = "./server" }
palladin-cli = { path = "./cli" }
tokio = { version = "1.48.0", features = ["full"] }
fs-err = "3.1.3"
axum = { version = "0.8.6", features = ["ws"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rolldown = { git = "https://github.com/rolldown/rolldown" }
rolldown_error = { git = "https://github.com/rolldown/rolldown" }
rolldown_common = { git = "https://github.com/rolldown/rolldown" }
notify = "8.2.0"