[package]
name = "palladin-server"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { workspace = true }
tokio = { workspace = true }
palladin-shared = { workspace = true }
log = "0.4.28"
fs-err = { workspace = true }
sha2 = "0.10"
parking_lot = "0.12"
rolldown = { workspace = true }
rolldown_common = { workspace = true }
rolldown_watcher = { git = "https://github.com/rolldown/rolldown" }
rolldown_utils = { git = "https://github.com/rolldown/rolldown" }
rolldown_error = { git = "https://github.com/rolldown/rolldown" }
anyhow = "1.0.100"
futures = "0.3.31"
tracing = "0.1.41"
arcstr = "1.2.0"
sugar_path = "1.2.0"